# modeller

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-rel-with-deb-info  README.md  docker-compose.yml  modeller.yml
.devcontainer/: Dockerfile  devcontainer.json
data/SPICE/: furnsh_ex7.txt
data/examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py
examples/: example2.py  example3.py  example4.py  example6.py  example7.py  example8.py
include/Modeller/: Modeller.hpp  SpiceInterface.hpp  consts.hpp  examples.hpp  forces.hpp  output.hpp  rotations.hpp  simulation.hpp  world.hpp
src/Modeller/: Modeller.cpp  SpiceEngine.cpp  SpiceFrameMotion.cpp  forces.cpp  output.cpp  rotations.cpp  world.cpp
src/examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp
